syntax = "proto3";

package proto;

import "create_service.proto";
import "get_stats.proto";
import "post_call.proto";

option go_package = "github.com/9Neechan/EI-test-task/api/proto";

service StatsService {
    rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse){}
    rpc PostCall(PostCallRequest) returns (PostCallResponse){}
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse){}
}
